--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "noImplicitAny": true,
+        "strictNullChecks": true,
         "moduleResolution": "node",
         "module": "es6",
         "target": "es6",
