--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rubik",
+  "name": "puzzlecube",
   "version": "1.0.0",
-  "description": "Rubik cube simulator",
+  "description": "Rubik's cube simulator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
     "raw-loader": "^3.1.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.6.2",
+    "url-loader": "^2.2.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8"
   }
